# testing-framework

./: .clang-format  CMakeLists.txt  CODEOWNERS  README.md
.github/workflows/: build_and_test.yml  reuse_check.yml
.reuse/: dep5
src/: CMakeLists.txt  rng.c  rng.h  test.c  test.h  thread.c  thread.h
test/: CMakeLists.txt  fail_assert.c  fail_explicit.c  fail_implicit.c  fail_implicit_multi.c  fail_top_level_assert.c  main.c  stubs.c  stubs.h  unexp_pass_assert.c  unexp_pass_plain.c
test/libinclude/: lib1.c  lib2.c  libs.c
